# sonoscope

./: .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
analyzer/: main.py  pyproject.toml
analyzer/sonoscope_analyzer/: __init__.py  audio.py  classifier.py  heuristics.py  interfaces.py  main.py  metadata.py  protocol.py  torch_utils.py  waveform.py
analyzer/tests/: test_audio.py  test_classifier.py  test_heuristics.py  test_main.py  test_metadata.py  test_protocol.py  test_waveform.py
src-tauri/: .gitignore  Cargo.toml  dev.db  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-0632618f093f68c107dc4253931d2f84e771cb9d68e722d2d1e1644be88905b0.json  query-0e7772405994ceb98a2b619be801e6850b600ae3d07c2fd209a476da42bab527.json  query-0ecf353c2ff48215845e6d6d6320214861f305edbd7b6e0bc9925deddc575648.json  query-0f488cc97b55250617b6f715db877decb454f39c36181c3ff713e2eb50f4d146.json  query-13d2be68163048c0fc98efe7b4d3d8b5aa84db280143c9619322d99d422e7ac0.json  query-14af82187a4f0b0458a6d72899717963a495b0b658774cc97737dc1fc42f92ad.json  query-16984ca4928abb3c90512e950d5f65cdcb3c9463ec5a89fb761300a6eae2a06b.json  query-18cc0e1919219b0d59f68ee2c11cdbe1baea42d8d5eeb33e59cf5a8f72337bf7.json  query-1abc7051117cb36af0bb7623139d0b1a7511cbb5e566c3af61b22ac9a79f54d9.json  query-1ce8f10106014afa6114c7a5c838ea6bd20caa3ad6ed499fb7af7b041ca06ce3.json  query-1ceacc53e94ef9163ea200c7212c1af2eeb83e62c0d2985e89bb885fe17cd3c3.json  query-1d4ade0b57d797ba2912f47192c852e7befd6845500adab33fe0a21a85b01efe.json  query-245b5db6b9370e3d722b4c1bb1237a55fbefc6c552d004609bba24fe61b06ff3.json  query-27a5dbcba946a109d4e71fb0d63ce3e347eef7041e631c8a69d5e0a2c8c01f2e.json  query-318053a4b85167de88d9f491526e266dd3d21725224a9d3b64af30dfcb83492a.json  query-35f3b4b69a622d7b307e4183c47c24e64cb9ac288c0eef3e6dd5959c3fcebeff.json  query-372d82f0170eac4c1fab408d80525e6ac712811bd2bc40406b96abae978f28e6.json  query-3e1da02e40a9b3cfcbb1717a2a14756942ba6c1896b2cde2adfcc197b8fdb275.json  query-3e92221387310ae8e6c5141e3a7e3bbdcc94abb2a4e091737b663dc7cb0d4ab1.json  query-3f69c94e8ed45e08ceea74f065cded35dd091eae1cdc31541d8a57fbcc38a5e0.json  query-42fa513759867a1789ae5107c95dae26231e223cdbb3c478248b0d847b152b4b.json  query-440061547b1bd72a94e25c67e26f40f58fb506cd6321553017ccc1aa9106d046.json  (+54 more)
src-tauri/migrations/: 001_init.sql  002_tags.sql  004_primary_tags.sql  (+5 more)
(+70 files in other folders)
