[project]
name = "sonoscope-analyzer"
version = "0.1.0"
description = "Sonoscope audio analysis pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mutagen>=1.47.0",
    "numpy>=2.0.0",
    "panns-inference>=0.1.1",
    "pydantic>=2.13.4",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "transformers>=4.57.6",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
