[package]
name = "sonoscope"
version = "0.1.0"
description = "Sonoscope — audio sample library manager"
authors = ["Eugene Dementjev"]
edition = "2021"
default-run = "sonoscope"

[lib]
name = "sonoscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
twox-hash = "2"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "=0.0.12"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
